# quickml

./: .gitignore  README.md  setup.py
backend/: app.py  cli.py  pyproject.toml  speedlab.ipynb  training.py
backend/deploy/: main.py
backend/deploy/assets/: cancer_detection.pth
backend/quickml-tissue-cancer.mlpackage/: Manifest.json
backend/quickml-tissue-cancer.mlpackage/Data/com.apple.CoreML/: model.mlmodel
quickml/: package.json  pnpm-lock.yaml
quickml-app/DepthApp/: CameraView.swift  DataModel.swift
quickml-app/DepthCLI/: MainCommand.swift
quickml-app/DepthSample.xcodeproj/: project.pbxproj
quickml-app/DepthSample.xcodeproj/project.xcworkspace/xcuserdata/gabrycina.xcuserdatad/: UserInterfaceState.xcuserstate
quickml/app/: layout.tsx
quickml/app/dashboard/: page.tsx
quickml/app/new-model/: page.tsx
quickml/app/past-models/: page.tsx
quickml/components/: app-sidebar.tsx
